--- a/index.html
+++ b/index.html
@@ -326,6 +326,8 @@
 			let rightForearmMovingUp = null;
 			let waistMoving = null;
 
+			let movementThreshold = 10;
+
 			function checkMovement() {
 			if (!detectMovement || speaking) {
 					return;
