--- a/index.html
+++ b/index.html
@@ -351,6 +351,7 @@
 				const rightForearmMovingLeft = (!rightForearmMovingUp && rightForearmMovingUp !== null && !leftForearmMovingUp && rightShoulderMovingUp === null);
 
 			function checkMovement() {
+				console.log("checkMovement root");
 			if (!detectMovement || speaking) {
 					return;
 				}
@@ -364,7 +365,7 @@
 					const currentValue = potValues[i];
 					const previousValue = previousPotValues[i];
 					let movingUp = null;
-
+					console.log("For loop");
 					const movement = currentValue - previousValue;
 					if (Math.abs(movement) > movementThreshold) {
 						// Movement detection logic for each body part
@@ -426,19 +427,21 @@
 							// Movement detection for right forearm (left and right movement)
 							if (currentValue < previousValue - movementThreshold) {
 								rightForearmMovingUp = true; // Right forearm is moving left
-						directionMovement = "left";
+								directionMovement = "left";
 							} else if (currentValue > previousValue + movementThreshold) {
 								rightForearmMovingUp = false; // Right forearm is moving right
-						directionMovement = "right";
+								directionMovement = "right";
 							}
 						} else if (partMoving === "WAIST") {
 							// Movement detection for waist (left and right movement)
 							if ((currentValue < previousValue - movementThreshold) && leftLegMovingUp && rightLegMovingUp) {
 								waistMoving = true; // Waist is moving left
-						directionMovement = "left";
+								directionMovement = "left";
+								console.log("Waist left");
 							} else if ((currentValue > previousValue + movementThreshold) && leftLegMovingUp && rightLegMovingUp) {
 								waistMoving = false; // Waist is moving right
-						directionMovement = "right";
+								directionMovement = "right";
+								console.log("Waist right");
 							}
 						}
 						// Continue with similar logic for other body parts
