--- a/index.html
+++ b/index.html
@@ -447,7 +447,7 @@
 				// Display text for detected movements
 				if (bodyMovingUp || bodyMovingDown || leftArmMovingUp || leftArmMovingDown || rightArmMovingUp || rightArmMovingDown || bothLegsMovingUp || bothLegsMovingDown ||
 					leftLegOnlyMovingUp || leftLegOnlyMovingDown || rightLegOnlyMovingUp || rightLegOnlyMovingDown || headMovingUp || headMovingDown || waistMovingRight || waistMovingLeft || leftForearmMovingLeft || leftForearmMovingRight || rightForearmMovingLeft || rightForearmMovingRight) {
-					displayText(`${partMoving} is moving ${directionMoving}`);
+					displayText("{partMoving} is moving {directionMoving}");
 				}
 
 				// Start cooldown timer for waist if it's moving
