--- a/index.html
+++ b/index.html
@@ -435,7 +435,8 @@
 								waistMoving = null;
 							}
 						}
-					}
+
+					console.log(partMoving+directionMoving)}
 				}
 
 				// Combined movements based on body parts
